@@ -1351,6 +1351,7 @@ BEGIN
     PUSHBUTTON      "Go to...",IDC_GOTO,112,248,50,14
     PUSHBUTTON      "Save...",IDC_SAVE,331,248,50,14
     PUSHBUTTON      "Close",IDOK,384,248,50,14
+    COMBOBOX        IDC_BYTESPERROW,164,249,86,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
 END
 
 IDD_MEMPROTECT DIALOGEX 0, 0, 270, 171
